# LiV

./: .gitignore  CMakeLists.txt  MPINatives.cpp  ManageRendering.cpp  README.md  library.cpp  liv.h
examples/: CMakeLists.txt  distributed_dvr.cpp  distributed_dvr_non_convex.cpp
examples/tools/: volume_divider.cpp
include/: JVMData.h  MPIBuffers.h  MPINatives.h  ManageRendering.h  liv.h
include/utils/: JVMUtils.h
src/: CMakeLists.txt  MPINatives.cpp  ManageRendering.cpp
src/utils/: JVMUtils.cpp
tests/: CMakeLists.txt  JVMUtilsTests.cpp  LiVTests.cpp
utils/: JVMUtils.cpp  JVMUtils.h
